[build-system]
requires = [
  "setuptools>=64",
  "wheel",
  "cython>=3.0.11,<4",
  "numpy>=2.0,<3"
]
build-backend = "setuptools.build_meta"

[project]
name = "hdbscan"
version = "0.8.43"
description = "Clustering based on density with variable density clusters"
readme = "README.rst"
requires-python = ">=3.10"
license = {text = "BSD"}
authors = [
  {name = "Leland McInnes", email = "leland.mcinnes@gmail.com"}
]
keywords = ["cluster", "clustering", "density", "hierarchical"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved",
  "Programming Language :: C",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

dependencies = [
    "numpy>=1.20,<3",
    "scipy>= 1.0",
    "scikit-learn>=1.6",
    "joblib>=1.0"
]

[dependency-groups]
cicd = ["pytest", "pytest-azurepipelines", "pytest-cov", "pytest-benchmark"]

[project.urls]
Homepage = "http://github.com/scikit-learn-contrib/hdbscan"

[tool.setuptools]
packages = ["hdbscan", "hdbscan.tests"]

[tool.setuptools.package-data]
hdbscan = ["dist_metrics.pxd"]
